--- a/style.css
+++ b/style.css
@@ -13,11 +13,14 @@ body{
 }
 .container{
     position: relative;
-    width: 640px;
+   
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+#canvas-container{
+    width: 100%;
 }
 .info-bar{
  
@@ -44,4 +47,46 @@ body{
     font-size: 2rem;
     margin-left:.8rem;
     margin-right:.8rem;
+}
+.ms-description{
+    display: none;
+}
+.pad{
+    width: 100%;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: "up up up" "left down right";
+    background-color: lightblue;
+}
+.pad div{
+    width: 25vw;
+    height: 25vw;
+    background-color: gray;
+}
+.left{
+    grid-area: left;
+    align-self: end;
+}
+.down{
+    grid-area: down;
+    align-self: center;
+}
+.right{
+    grid-area: right;
+    align-self: start;
+}
+.up{
+    grid-area: up;
+    align-self: center;
+}
+
+@media (min-width:640px){
+    .ms-description{
+        display: block;
+    }
+    .pad{
+        display:none;
+    }
 }
